# git_practice

./: civetweb.cmake  cmake-config.bat  json.cmake  libcurl.cmake  libssh.cmake  lz4.cmake  oneTBB.cmake  openssl.cmake  sqlite.cmake  static.cmake  unordered_dense.cmake  yyjson.cmake  zlib.cmake
Lampad/: .gitignore  Readme.md  _pandorasbox-40G.json  _pandorasbox-SBC.json  _pandorasbox-linux.json  _pandorasbox-windows.json  curlwrapper.cpp  curlwrapper.h  elapsedtimer.cpp  elapsedtimer.h  events.h  featherlite.cpp  featherlite.h  fnvhash.cpp  fnvhash.h  license.cpp  license.h  loghandler.cpp  loghandler.h  myriad.cpp  myriad.h  sshwrapper.cpp  sshwrapper.h  supercodex.cpp  supercodex.h
Lampad/lampadxanomalydetection_dump/: 00_1A_F4_4E_EA_96_tcp_rtt_detection_results.json  00_1A_F4_4E_EA_96_udp_rtt_detection_results.json  dump_short.json
Lampad/spin7/: CMakeLists.txt  ailampadxanomaly.cpp  ailampadxanomaly.h  civet7.cpp  civet7.hpp  codexindex.cpp  codexindex.h  datafeed.cpp  datafeed.h  datafeedrefinery.cpp  datafeedrefinery.h  event7.cpp  event7.h  event7_optimized.cpp  feedrefinerabstract.cpp  feedrefinerabstract.h  feedrefinerbasic.cpp  feedrefinerbasic.h  feedrefinermain.cpp  feedrefinermain.h  feedrefinerspecialized.cpp  feedrefinerspecialized.h  feedrefinertopn.cpp  feedrefinertopn.h  feedrefinertrackers.cpp  feedrefinertrackers.h  main.cpp  miscellany.cpp  miscellany.h  paradox.cpp  paradox.h  paranoia.cpp  paranoia.h  reportmanager.cpp  reportmanager.h  spin7_build.sh  subsystems.cpp  subsystems.h  supercache.cpp  supercache.h  (+8 more)
Lampad/spin7/windows_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  spin7.sln  spin7.vcxproj  spin7.vcxproj.filters
Lampad/spin7/windows_build/spin7.dir/Release/spin7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Lampad/spin7/windows_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Lampad/spin7/windows_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
